--- a/styles/main.css
+++ b/styles/main.css
@@ -5609,15 +5609,15 @@ Created using IcoMoon - icomoon.io
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
   .sidebar-collapse .navbar-collapse:before {
-    background: #378C3F;
+    background: #007BFF;
     /* For browsers that do not support gradients */
     /* For Safari 5.1 to 6.0 */
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
-    background: -webkit-gradient(linear, left top, left bottom, from(#378C3F), color-stop(80%, #000));
-    background: linear-gradient(#378C3F 0%, #000 80%);
+    /* background: -webkit-gradient(linear, left top, left bottom, from(#007BFF), color-stop(80%, #000)); */
+    background: linear-gradient(#007BFF 0%, #000 80%);
     /* Standard syntax (must be last) */
-    opacity: 0.76;
+    /* opacity: 0.76; */
     filter: alpha(opacity=76);
     display: block;
     content: "";
